Switch to inputs-based approach for better security and reusability
- Changed from direct secret access to inputs for credentials
- Added required inputs: openai_api_key and slack_webhook
- Updated all examples to use the new explicit input pattern
- Improved security by making secret dependencies explicit
- Better reusability across different organizations
- Follows GitHub Actions best practices

--- a/example-workflow.yml
+++ b/example-workflow.yml
@@ -8,8 +8,11 @@ jobs:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
-      - uses: ionworks/pr-summary-action@v1.1
+      - uses: ionworks/pr-summary-action@v1.3
         with:
+          # Required: Pass secrets as inputs
+          openai_api_key: ${{ secrets.OPENAI_API_KEY }}
+          slack_webhook: ${{ secrets.SLACK_WEBHOOK }}
           # Optional: Use GPT-4 for better summaries
           model: "gpt-3.5-turbo"
           # Optional: Override default Slack channel
