--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,12 @@
 name: "PR Summary"
 description: "AI-powered PR summaries to Slack"
 inputs:
+  openai_api_key:
+    description: "OpenAI API key"
+    required: true
+  slack_webhook:
+    description: "Slack webhook URL"
+    required: true
   model:
     description: "AI model (gpt-3.5-turbo, gpt-4)"
     default: "gpt-3.5-turbo"
@@ -19,9 +25,9 @@ runs:
         pip install -e ${{ github.action_path }}
     - shell: bash
       env:
-        # Use GitHub secrets for secure credential storage
-        OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-        SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+        # Use inputs for secure credential storage
+        OPENAI_API_KEY: ${{ inputs.openai_api_key }}
+        SLACK_WEBHOOK: ${{ inputs.slack_webhook }}
         GITHUB_TOKEN: ${{ github.token }}
         MODEL: ${{ inputs.model }}
         SLACK_CHANNEL: ${{ inputs.slack_channel }}
