--- a/.github/workflows/pr-summary.yml
+++ b/.github/workflows/pr-summary.yml
@@ -8,7 +8,7 @@ jobs:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
-      - uses: ionworks/pr-summary-action@v1.3
+      - uses: ionworks/pr-summary-action@test-realistic-feature
         with:
           openai_api_key: ${{ secrets.OPENAI_API_KEY }}
           slack_webhook: ${{ secrets.SLACK_WEBHOOK }}
