Clean up debugging and test-only code
- Remove all debug print statements and excessive logging
- Simplify OpenAI prompt to exclude author info from summaries
- Update marketing message guidance for basic fixes
- Switch workflow back to @main instead of test branch
- Remove test-only files: TEST_v1.4.md, TEST.md, summarize.py
- Keep clean, production-ready codebase

--- a/.github/workflows/pr-summary.yml
+++ b/.github/workflows/pr-summary.yml
@@ -8,7 +8,7 @@ jobs:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
-      - uses: ionworks/pr-summary-action@test-realistic-feature
+      - uses: ionworks/pr-summary-action@main
         with:
           openai_api_key: ${{ secrets.OPENAI_API_KEY }}
           slack_webhook: ${{ secrets.SLACK_WEBHOOK }}
